[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Other/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Other/invisble.png" type="Texture" id=2]
[ext_resource path="res://Sprites/GUI/Theme/DialogueBox.tres" type="StyleBox" id=3]
[ext_resource path="res://Fonts/doublix.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/defaut.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sprites/GUI/Dials/box_0.png" type="Texture" id=6]

[node name="DialogueBox" type="CanvasLayer"]
layer = 0
script = ExtResource( 1 )

[node name="ProfilePic" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -1457.0
margin_top = -278.956
margin_right = -485.0
margin_bottom = -83.9559
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
region_rect = Rect2( -555.912, -0.905945, 654.412, 138.495 )

[node name="Message" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -492.0
margin_top = -100.0
margin_right = 488.0
custom_styles/normal = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0.509804, 0.662745, 1 )
text = "Salut mec"
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 25.0
margin_top = 500.0
margin_right = 1000.0
margin_bottom = 600.0

[node name="Name" type="Label" parent="."]
margin_left = 26.2593
margin_top = 474.67
margin_right = 110.259
margin_bottom = 502.67
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0.88501, 0.90625, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 12.7277
margin_top = 155.589
margin_right = 332.728
margin_bottom = 235.589

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 320.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/HBoxContainer/MarginContainer"]
texture = ExtResource( 6 )

[node name="talk" type="AudioStreamPlayer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
